# SuperMario

./: .gitignore  CMakeLists.txt  Makefile  README.md  data.json  entity.json  imgui.ini  out.h  parse  parse.cpp  parse_state_and_behavior.cpp  player.json  prefabs.json  sample.json  save.json  should_read_from_json.json
assets/Levels/: map11.json  map11b.json  map54.json  map54b.json  map61.json  map61b.json  menu1.json  menu1b.json
assets/Player/: player_animation.json
include/: Coin.hpp  CoinManager.hpp  Component.hpp  Enemy.hpp  Entity.hpp  Game.hpp  GameManager.hpp  GameState.hpp  Ground.hpp  LevelHandler.hpp  LevelManager.hpp  Mario.hpp  MenuState.hpp  Pipe.hpp  PlayingState.hpp  RegisterStates.hpp  ScoreManager.hpp  Serialize.hpp  SettingsState.hpp  StateManager.hpp  StateRegistry.hpp  System.hpp  ThemeManager.hpp  Tile.hpp  TimeManager.hpp  UI.h  World.hpp  animation.h  app.h  background.h  block.h  coin.h  coinBlock.h  debris.h  enemy.h  fire.h  flower.h  game.h  gameObject.h  goomba.h  (+14 more)
include/Components/: Animation.hpp  BlockTag.hpp  BoxCollider2D.hpp  DeadTag.hpp  Declaration.hpp  EnemyAI.hpp  EnemyTag.hpp  Gravity.hpp  Health.hpp  Input.hpp  LifeSpan.hpp  PlayerTag.hpp  RigidBody.hpp  Sprite2D.hpp  Tags.hpp  Transform.hpp
include/Core/: AnimationManager.hpp  Game.hpp  KeyPressPool.hpp  MessageBus.hpp  Physics.hpp  TextureManager.hpp  Utility.hpp  Variables.hpp
include/ECS/: Component.hpp  Entity.hpp  System.hpp
include/Editor/: Editor.hpp  EntityEditor.hpp  EntityInspector.hpp  Helper.hpp  Model.hpp  PrefabPanel.hpp  PrefabStorage.hpp
include/Factories/: BlockFactory.hpp  EnemyFactory.hpp  ItemFactory.hpp  PipeFactory.hpp
include/Framework/: ComponentRegistry.hpp  EntityManager.hpp  SaveManager.hpp  SystemManager.hpp  World.hpp
include/LevelEditor/: ComponentEditor.hpp  Helper.hpp  LevelEditor.hpp  Model.hpp  PrefabStorage.hpp
include/LevelState/: GameOverState.hpp  GameWinState.hpp  InGameState.hpp  IntroState.hpp  LevelChosenState.hpp  LevelState.hpp  TimeUpState.hpp
include/NewUI/: Composite.hpp  Composite1.hpp
include/PlayerMovementStates/: PlayerClimbingState.hpp  PlayerIdlingState.hpp  PlayerJumpingState.hpp  PlayerMovementState.hpp  PlayerRunningState.hpp
include/PlayerPowerStates/: PlayerBigInvincibleState.hpp  PlayerBigState.hpp  PlayerDeadState.hpp  PlayerFireState.hpp  PlayerGrowingUpState.hpp  PlayerShrinkingState.hpp  PlayerSmallInvincibleState.hpp  PlayerSmallState.hpp
include/PlayerStates/: PlayerIdlingState.hpp  PlayerJumpingState.hpp  PlayerRunningState.hpp  PlayerState.hpp
include/Prefabs/: Background.hpp  Bell.hpp  Block.hpp  Bridge.hpp  Coin.hpp  Debris.hpp  Elevator.hpp  Enemy.hpp  FireBar.hpp  FireBullet.hpp  Fireball.hpp  Fireworks.hpp  Flower.hpp  Mario.hpp  Mushroom.hpp  Pipe.hpp  Piranha.hpp  Podoboo.hpp  Star.hpp  Tile.hpp
include/Serialization/: ComponentMeta.hpp  CustomJSON.hpp  Macros.hpp  StateManager.hpp  sfmlJSON.hpp
include/States/: CustomState.hpp  GameState.hpp  KeySettingState.hpp  LoadState.hpp  MenuState.hpp  PlayingState.hpp  SettingsState.hpp  StateRegistry.hpp
include/Systems/: AnimationSystem.hpp  CameraSystem.hpp  ColliderSystem.hpp  CollisionDetectionSystem.hpp  CollisionResolutionSystem.hpp  CollisionSystem.hpp  ControlSystem.hpp  Declaration.hpp  EnemyAISystem.hpp  GravitySystem.hpp  LifeSystem.hpp  MovementSystem.hpp  PlayerCollisionSystem.hpp  PlayerControlSystem.hpp  PlayerEnemyCollisionSystem.hpp  PlayerInputSystem.hpp  PlayerMovementSystem.hpp  PlayerStateSystem.hpp  RenderSystem.hpp  StateSystem.hpp
include/UI/: Button.hpp  ButtonContainer.hpp  CommonUIPool.hpp  Composite.hpp  HelperBuilder.hpp  KeyBinding.hpp  ResourceHolder.hpp  TextureHolder.hpp  UIComponentPool.hpp  UIConstant.hpp  roundedRectShape.hpp
lib/: UI.h  animation.h  app.h  background.h  block.h  coin.h  coinBlock.h  debris.h  enemy.h  fire.h  flower.h  game.h  gameObject.h  goomba.h  groundBlock.h  handler.h  item.h  keyInput.h  koopa.h  levelHandler.h  levelupBlock.h  mushroom.h  normalBlock.h  pipe.h  player.h  questionBlock.h  star.h  starBlock.h
saves/: 2025-08-24 21-12-36.json  2025-08-24 21-12-43.json  2025-08-24 21-13-51.json  2025-08-24T18:36:11.json  2025-08-24T18:39:31.json  2025-08-24T18:40:20.json  index.json
source/: UI.cpp  animation.cpp  background.cpp  block.cpp  coin.cpp  coinBlock.cpp  enemy.cpp  gameObject.cpp  goomba.cpp  handler.cpp  keyInput.cpp  koopa.cpp  levelHandler.cpp  mushroom.cpp  normalBlock.cpp  player.cpp  questionBlock.cpp
source/Animation/: animation.cpp
source/Block/: block.cpp  coinBlock.cpp  debris.cpp  levelupBlock.cpp  normalBlock.cpp  questionBlock.cpp  starBlock.cpp
source/Enemy/: enemy.cpp  (+2 more)
src/: Game.cpp  GameManager.cpp  LevelHandler.cpp  MenuState.cpp  PlayingState.cpp  SettingsState.cpp  ThemeManager.cpp  World.cpp  background.cpp  main.cpp
tool/: out.h  parse  parse_state_and_behavior
(+501 files in other folders)
